java 17 cleanup